@@ -214,6 +214,7 @@ Chronological list of authors
   - Alexander Schlaich
   - Josh Vermaas
   - Xiaoxu Ruan
+  - Egor Marin
 
 External code
 -------------
