@@ -390,7 +390,7 @@ class AnalysisBase(object):
         pass  # pylint: disable=unnecessary-pass
 
     def run(self, start=None, stop=None, step=None, frames=None,
-            verbose=None):
+            verbose=None, *, progressbar_kwargs={}):
         """Perform the calculation
 
         Parameters
@@ -411,12 +411,19 @@ class AnalysisBase(object):
 
         verbose : bool, optional
             Turn on verbosity
+        
+        progressbar_kwargs : dict, optional
+            ProgressBar keywords with custom parameters regarding progress bar position, etc; 
+            see :class:`MDAnalysis.lib.log.ProgressBar` for full list.
 
 
         .. versionchanged:: 2.2.0
             Added ability to analyze arbitrary frames by passing a list of
             frame indices in the `frames` keyword argument.
 
+        .. versionchanged:: 2.5.0
+            Add `progressbar_kwargs` parameter, 
+            allowing to modify description, position etc of tqdm progressbars
         """
         logger.info("Choosing frames to analyze")
         # if verbose unchanged, use class default
@@ -429,9 +436,11 @@ class AnalysisBase(object):
         self._prepare()
         logger.info("Starting analysis loop over %d trajectory frames",
                     self.n_frames)
+
         for i, ts in enumerate(ProgressBar(
                 self._sliced_trajectory,
-                verbose=verbose)):
+                verbose=verbose,
+                **progressbar_kwargs)):
             self._frame_index = i
             self._ts = ts
             self.frames[i] = ts.frame
